fix: Remover altura mÃ­nima dos containers de tags para melhorar espaÃ§amento

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                             placeholder="Pressione Enter para adicionar"
                             class="form-input"
                             onkeypress="handleSecondaryKeywordEnter(event)">
-                        <div id="secondaryKeywordsContainer" class="flex flex-wrap gap-2 mt-2.5 min-h-[32px]">
+                        <div id="secondaryKeywordsContainer" class="flex flex-wrap gap-2 mt-2.5">
                             <!-- Secondary keywords tags will be inserted here -->
                         </div>
                     </div>
@@ -672,7 +672,7 @@
                             placeholder="Pressione Enter para adicionar"
                             class="form-input"
                             onkeypress="handleLongTailKeywordEnter(event)">
-                        <div id="longTailKeywordsContainer" class="flex flex-wrap gap-2 mt-2.5 min-h-[32px]">
+                        <div id="longTailKeywordsContainer" class="flex flex-wrap gap-2 mt-2.5">
                             <!-- Long tail keywords tags will be inserted here -->
                         </div>
                     </div>
