style: Mover cabeÃ§alho para fora do card e alterar fundo para branco

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                 <!-- End SEO Page -->
 
                 <!-- SEO Form Page -->
-                <div id="seoFormPage" class="hidden">
-                    <div class="max-w-6xl mx-auto px-4 sm:px-6">
+                <div id="seoFormPage" class="hidden bg-white">
+                    <div class="max-w-6xl mx-auto px-4 sm:px-6 py-6">
                         <!-- Header -->
                         <div class="mb-6 flex items-center justify-between gap-4">
                             <div class="min-w-0 flex-1">
@@ -211,7 +211,7 @@
                         </div>
 
                         <!-- Form Card -->
-                        <div class="bg-white rounded-lg shadow-sm border border-neutral-200">
+                        <div class="bg-neutral-50 rounded-lg shadow-sm border border-neutral-200">
                             <form id="seoFormMain" class="p-4 sm:p-6">
                                 <input type="hidden" id="seoFormProductId">
                                 
