--- a/index.html
+++ b/index.html
@@ -173,25 +173,7 @@
                         </div>
                         
                         <!-- Empty State SEO -->
-                        <div id="emptyStateSeo" class="flex items-center justify-center min-h-[500px]">
-                            <div class="text-center max-w-md">
-                                <div class="bg-neutral-100 rounded-full p-4 w-16 h-16 mx-auto mb-4 flex items-center justify-center">
-                                    <svg class="w-8 h-8 text-neutral-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                                    </svg>
-                                </div>
-                                <h3 class="text-lg font-semibold text-neutral-900">Nenhum SEO cadastrado</h3>
-                                <p class="mt-2 text-sm text-neutral-500">Comece criando um novo cadastro de SEO para um produto.</p>
-                                <div class="mt-6">
-                                    <button onclick="openSelectProductModal()" class="inline-flex items-center px-4 py-2 border border-neutral-300 shadow-sm text-sm font-medium rounded-lg text-neutral-700 bg-white hover:bg-neutral-50 transition-all">
-                                        <svg class="-ml-1 mr-2 h-4 w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
-                                        </svg>
-                                        Criar SEO
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
+                        <div id="emptyStateSeo" class="hidden"></div>
                     </div>
                 </div>
                 <!-- End SEO Page -->
