refactor: Padronizar todos dropdowns com novo modelo moderno e ajustar tamanho com inputs

--- a/index.html
+++ b/index.html
@@ -266,16 +266,11 @@
                                 </div>
 
                                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
-                                    <!-- Sexo -->
-                                    <div>
-                                        <label class="form-label">Sexo</label>
-                                        <select id="genderSelect" class="form-input">
-                                            <option value="">Selecione</option>
-                                            <option value="Masculino">Masculino</option>
-                                            <option value="Feminino">Feminino</option>
-                                            <option value="Unissex">Unissex</option>
-                                        </select>
-                                    </div>
+                            <!-- Sexo -->
+                            <div>
+                                <label class="form-label">Sexo</label>
+                                <div id="genderSelectContainer"></div>
+                            </div>
                                     
                                     <!-- Valor do Produto (Dados Financeiros) -->
                                     <div>
