--- a/index.html
+++ b/index.html
@@ -454,20 +454,22 @@
                 <!-- End SEO Form Page -->
 
                 <!-- Utilities Page -->
-                <div id="utilitiesPage" class="hidden p-6 h-full flex flex-col">
-                    <div class="mb-6 flex justify-between items-center">
-                        <div>
-                            <h2 class="text-2xl font-semibold text-neutral-900">Links Úteis</h2>
-                            <p class="text-sm text-neutral-500 mt-1">Gerencie seus links de referência</p>
+                <div id="utilitiesPage" class="hidden min-h-full flex flex-col">
+                    <div class="p-6 pb-0">
+                        <div class="mb-6 flex justify-between items-center">
+                            <div>
+                                <h2 class="text-2xl font-semibold text-neutral-900">Links Úteis</h2>
+                                <p class="text-sm text-neutral-500 mt-1">Gerencie seus links de referência</p>
+                            </div>
+                            <button onclick="openAddLinkModal()" class="px-4 py-2.5 bg-neutral-900 text-white text-sm rounded-lg font-medium hover:bg-neutral-800 transition-all shadow-sm">
+                                Criar Link
+                            </button>
                         </div>
-                        <button onclick="openAddLinkModal()" class="px-4 py-2.5 bg-neutral-900 text-white text-sm rounded-lg font-medium hover:bg-neutral-800 transition-all shadow-sm">
-                            Criar Link
-                        </button>
                     </div>
 
                     <!-- Links List -->
-                    <div id="linksList" class="space-y-3"></div>
-                    <div id="emptyStateLinks" class="hidden flex-1 flex items-center justify-center">
+                    <div id="linksList" class="px-6 space-y-3"></div>
+                    <div id="emptyStateLinks" class="hidden flex-1 flex items-center justify-center px-6">
                         <div class="text-center max-w-md">
                             <svg class="w-16 h-16 mx-auto text-neutral-300 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"></path>
