--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!-- Main Content -->
             <main id="mainContent" class="flex-1 overflow-y-auto bg-neutral-100">
                 <!-- Products Page -->
-                <div id="productsPage">
+                <div id="productsPage" class="min-h-full">
                 <!-- Search and Filter Bar -->
                 <div class="p-6 pb-4">
                     <div class="flex items-center gap-3">
@@ -172,7 +172,7 @@
                 <!-- End Products Page -->
 
                 <!-- SEO Page -->
-                <div id="seoPage" class="hidden">
+                <div id="seoPage" class="hidden min-h-full">
                     <div class="p-6">
                         <div id="seoGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                             <!-- SEO cards will be inserted here -->
