fix: dropdown de tipo de produto aparece apenas ao criar novo produto, nÃ£o ao editar

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 <input type="hidden" id="simpleProductId">
                 
                 <!-- Tipo de Produto Dropdown -->
-                <div class="mb-6 pb-6 border-b border-neutral-200">
+                <div id="simpleProductTypeSection" class="mb-6 pb-6 border-b border-neutral-200">
                     <label class="form-label">Tipo de Produto *</label>
                     <div id="productTypeDropdownContainer"></div>
                 </div>
