--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="bg-neutral-100 min-h-screen">
     <div class="flex h-screen overflow-hidden">
@@ -904,6 +904,6 @@
 
     
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
